Version 2.1.0.3
=================
Implemented an "EC_DVB_DURATIONCHANGE" event to occur every second of an increase of stream time duration on live recorded captures.

Version 2.1.0.2
=================
Changed the IAMStreamSelect Interface Group order to zero base as it should have been.
Just a bit more of a tidy up as well as fixed a Release statment in the CreateAC3Pin function which was left commented out in testing.
Found Graph release problem in CheckConnect Function so Reclock Filter should now work again. 
Added ROT check to see if Object is already referenced so it will not make a double entry.
Set Language descriptors to English default in IAMStreamSelect Interface. Also changed IAMStreamSelect Info Function to allow for Null pointers to be supplied.
Added Filtergraph Reference Clock property Page Setting. This is to allow some DirectSound cards to have the correct reference clock set. Three options are Default, Demux & Render.
Added ROT enable option to Property Page. The Filter can now register the filtergraph that its in to the Running Object table. Should allow access to the IAMStreamSelect Interface from other applications. 
Fixed Filter Peers parsing, was only finding one filter chain.
Fixed Object release problem in checkConnect function.
Added Reference Clock setting code for testing.
Added StreamInfo & StreamParser classes and updated code to allow selection of Audio Tracks via the IAMStreamInterface.
Added IAMStreamSelect Interface to filter. Allows for basic Program switching on applications.
Fixed a bug in the NID file Parsing code to eliminate false NID's from previous channel.
Changed the Property page CLSID to eliminate clashing with another filter.
Rearranged the ITSFileSource Interface methods order to keep consistancy with the earlier official version 2.0.1.7.
Note: Any programs that have used the above Interface with the earlier test versions will now need to recompile using the new interface method order.